@@ -6,6 +6,7 @@
 * added support for Calibeur RF104 sensors
 * added support for acurite lightning sensor
 * handle negative temperatures
+* added experimental support for json format
 
 0.11 31oct2016
 * added parser for acurite 986 packets (thanks to andy)
